tests/NormalTests/paczka1/fuzzy1/27211611.err
Error in line 4: IsP9SG3yuc S205 80,6
Error in line 6: IsP9SG3yuc S790 75,6
Error in line 14: IsP9SG3yuc S205 70,2
Error in line 18: QWAeuM S790 15,0
Error in line 17: IsP9SG3yuc S790 56,0
